# 0xnox

./: .gitignore
.github/workflows/: mobile-release.yml
backend/: bridge_listener.py
backend/api/: __init__.py  endpoints.py  main.py  models.py  websocket.py  ws_handler.py
backend/bridge/: __init__.py  cli.py  config.py  emission.py  listener.py  processor.py
frontend/: .gitignore  README.md  app.html  capacitor.config.ts  index.html  maintenance.html  manifest.json  package.json
frontend/cgi-bin/: admin.cgi
frontend/css/: activity.css  analytics.css  bridge.css  capsules.css  cellframe-wallet.css  components.css  create.css  dashboard.css  detail.css  dev-portal.css  docs-mobile.css  docs.css  gate.css  hero.css  institutional.css  king.css  launchpad.css  leaderboard.css  mobile-production.css  mobile.css  nav-fix.css  nft-dashboard.css  nox-markets.css  onboarding.css  scroll-fix.css  stats.css  style.css  theme.css  toast.css  tokens.css  trading.css  wallet-modal.css  wallet-sidebar.css
frontend/docs/: nox-tokenomics-whitepaper.html
frontend/indexer/: Cargo.toml
frontend/indexer/src/: db.rs  events.rs  lib.rs  main.rs  types.rs
frontend/js/: abi.js  chart-draw.js  chart.js  config.js  contracts-create.js  contracts-graduation.js  contracts-trade.js  contracts.js  debug.js  gate.js  homepage-analytics.js  mobile-init.js  native-core.js  native-push.js  native-utils.js  onboarding-data.js  onboarding-nav.js  onboarding-render.js  platform-stats.js  pwa.js  router.js  theme.js  wallet-balance.js  wallet-core.js  wallet-tx.js  walletconnect.bundle.js
(+129 files in other folders)
