[package]
name = "oxnox-indexer"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
chrono = "0.4"
